# Library-CppQt

./: .gitignore  Biblioteca.pro  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  Relazione.tex  cmake_install.cmake  globals.cpp  globals.h  main.cpp  mainwindow.cpp  mainwindow.h
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Biblioteca_autogen/: deps  mocs_compilation.cpp
Biblioteca_autogen/WB4RFHLAU6/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
Biblioteca_autogen/include/: ui_MainWindow.h
Controller/: bibliotecacontroller.cpp  bibliotecacontroller.h
Model/: bibliotecamodel.cpp  bibliotecamodel.h  libro.cpp  libro.h  prestito.cpp  prestito.h  utente.cpp  utente.h
View/: mainwindow.cpp  mainwindow.h  mainwindow.ui
controllers/: bibliotecacontroller.cpp  bibliotecacontroller.h  usercontroller.cpp  usercontroller.h  viewcontroller.cpp  viewcontroller.h
models/: bibliotecamodel.cpp  bibliotecamodel.h  bookmodel.cpp  bookmodel.h  filmmodel.cpp  filmmodel.h  itemmodel.cpp  itemmodel.h  musicmodel.cpp  musicmodel.h  usermodel.cpp  usermodel.h  videomodel.cpp  videomodel.h
release/: moc_accountview.cpp  moc_bibliotecacontroller.cpp  moc_createitem.cpp  moc_edititem.cpp  moc_initialFileSelector.cpp  moc_loginview.cpp  moc_mainview.cpp  moc_registerview.cpp  moc_showitem.cpp  moc_viewcontroller.cpp
views/: accountview.cpp  accountview.h  createitem.cpp  createitem.h  edititem.cpp  edititem.h  initialFileSelector.cpp  initialFileSelector.h  mainview.cpp  mainview.h  showitem.cpp  showitem.h
views/auth/: loginview.cpp  loginview.h  (+2 more)
(+1 files in other folders)
